@@ -1,3 +1,8 @@
+2020-02-10  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-handle-shell-command): Fix `window-start' in
+	output buffer.  (Bug#39171)
+
 2020-02-07  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-open-shell): Read prompt when moving "~/.editrc".
